[project]
name = "supplement-label-decoder"
version = "0.1.0"
description = "Label Lens — a chatbot that decodes supplement labels and calls out marketing fluff using peer-reviewed evidence"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "litellm>=1.30.0",
    "google-cloud-aiplatform>=1.40.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["evals"]

[tool.uv]
package = false
